@@ -3,10 +3,12 @@ buildscript {
         mavenCentral()
         mavenLocal()
         jcenter()
+        // maven { url "https://plugins.gradle.org/m2/" } // shadow
     }
 
     dependencies {
         classpath 'com.bmuschko:gradle-clover-plugin:2.2.0'
+        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.3"
     }
 }
 
@@ -26,6 +28,14 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'com.bmuschko.clover'
+
+
+tasks.withType(GroovyCompile) {
+    configure(groovyOptions.forkOptions) {
+        memoryMaximumSize = '1g'
+        jvmArgs = ['-XX:MaxPermSize=512m', '-Xms512m', '-Xmx1g']
+    }
+}
 
 def confDir = "${project.rootDir}/qa-configurations"
 
